# TinySTL

./: CMakeLists.txt  readme.md
impl/: stl_sd_allocator.h
impl/SGI_STL/std_alloc/memory_handler/: std_alloc.h
impl/SGI_STL/std_alloc/object_handler/: construct.h  type_traits.h
impl/SGI_STL/std_allocator/: std_allocator.h
impl/STL_SD/: stl_sd_allocator_interface.h
impl/allocator/SGI_STL/std_alloc/: alloc_external_expose_interface.h  global_control.h  global_macro_control.h
impl/allocator/SGI_STL/std_alloc/memory_handler/: std_alloc.h
impl/allocator/SGI_STL/std_alloc/object_handler/: construct.h  type_traits.h
impl/allocator/SGI_STL/std_allocator/: std_allocator.cpp  std_allocator.h
impl/allocator/STL_SD/: stl_sd_allocator_interface.h
impl/containers/: list.h
impl/exception/: exceptdef.h
impl/iterator/: iterator.h
impl/uitls/: utils.h
implementation/: std_allocator.h
test/: headers.h  main  main.cpp  test.h  test_main.cpp  test_set.h
